apps/wordpress/overlays/prd/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wordpress
  namespace: wordpress
spec:
  hosts:
  - "www.diegoluisi.eti.br"
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: wordpress.wordpress.svc.lgsk8sp1.grupologos.local
